# aoc-polyglot

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  fmt.sh  lint.sh  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml
challenges/: README.md
challenges/2023/day01/: puzzle.md
challenges/2023/day01/rust/: Cargo.toml  README.md
challenges/2023/day01/rust/src/: main.rs
challenges/2023/day02/rust/: Cargo.toml  README.md  test.sh
challenges/2023/day02/rust/src/: main.rs
cli/: aoc_cli.rs  langs.rs  lib.rs  main.rs  readme_benchmarks.rs  runner.rs  utils.rs
cli/commands/: all.rs  download.rs  read.rs  scaffold.rs  solve.rs
templates/: README.md.tera
templates/python/: main.py  test.sh
templates/rust/: Cargo.toml.tera
templates/rust/src/: main.rs
templates/zig/: build.zig  test.sh
templates/zig/src/: main.zig
