[package]
name = "advent_of_code"
version = "0.0.0"
authors = [
    # Author of this fork
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
    # made the project this is based on
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>",
]
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
