[package]
name = "advent_of_code"
version = "0.0.0"
authors = [
    # Author of this fork
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
    # made the project this is based on
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>",
]
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent_of_code"
path = "cli/lib.rs"

[[bin]]
name = "advent_of_code"
path = "cli/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tera = "1.19"
lazy_static = "1.4"
time = { version = "0.3", features = ["formatting"] }
fs_extra = "1.3"
tap = "1.0"
serde_json = "1.0"
